--- a/src/style.css
+++ b/src/style.css
@@ -36,14 +36,16 @@ body {
 }
 
 .btn-outline-success {
-    color: #163abe;
-    border-color: #163abe;
-}
-
-.btn-outline-success:hover {
     color: #fff;
     background-color: #163abe;
     border-color: #163abe;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.btn-outline-success:hover {
+    color: #163abe;
+    border-color: #163abe;
+    background-color: #fff;
 }
 
 .btn-more {
@@ -146,7 +148,12 @@ footer {
     font-size: 29px;
     line-height: 1;
 }
-
+.search-input{
+    border-radius: 5px 0px 0px 5px;
+}
+.form-control:focus{
+    box-shadow: 0px 0px 0px 0px;
+}
 @media screen and (max-width: 600px) {
     .topnav-right {
         float: left;
